sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:15: error: identifier expected but integer literal found.
    T[j+1]=T[j]
        ^AlgInsertionSort:16: error: ']' expected but ';' found.
    j=j-1
^