sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {


var i:Int=0
var j:Int=0
var x:Int=0
var T:Array[n]
var n:Int=getNombreValeurs()

for (i <- 2 to n){
  x=T[i]
  j=i-1
  while(j>0 and T[j]>x){
    T[j+1]=T[j]
    j=j-1
   
  }
}
}
  //var lgr:Int=getNombreValeurs()
 // var i:Int=0
  //var v:Int=0
 // for (i <- 1 to lgr-1){
  //  while(v<i-lgr+1)
   //   if(i-1>v){
   //     echange(i-1,i)

